[package]
name = "bevy_xml"
version = "0.1.0"
edition = "2021"
keywords = ["bevy", "gamedev", "asset", "assets", "xml"]
description = "An Sparrow SpriteSheet XML Parser for Bevy!"
categories = ["game-development"]
readme = "README.md"
repository = "https://github.com/rayanmargham/bevy_xml"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.10", default-features = false, features = ["bevy_asset", "bevy_sprite", "bevy_scene", "bevy_core_pipeline", "bevy_pbr", "bevy_render"] }
serde = {version = "1.0.160", features = ["derive"]}
serde-xml-rs = "0.6.0"
bevy_sprite3d = {git = "https://github.com/rayanmargham/bevy_sprite3d"}
